fix overflow descktop

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,6 +9,10 @@ body {
   margin: 0;
 }
 
+.overflow {
+  overflow: hidden;
+}
+
 .wrapper {
   position: relative;
 
@@ -19,10 +23,6 @@ body {
 
   @media #{$tablet} {
     padding: 0 24px;
-  }
-
-  @media #{$mac} {
-    overflow: hidden;
   }
 }
 
